# ai-meeting-api

./: .env.example  .gitignore  .pre-commit-config.yaml  docker-compose.yml  main.py  pyproject.toml
ai_meeting_api/: db.sqlite3  manage.py
ai_meeting_api/ai_meeting_api/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
ai_meeting_api/ai_meeting_api/settings/: base.py  development.py
ai_meeting_api/ai_meeting_commons/: apps.py  exceptions.py  permissions.py  renderers.py
ai_meeting_api/ai_meeting_integrations/: confluence_client.py  openai_client.py  slack_client.py
ai_meeting_api/ai_meeting_meetings/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
ai_meeting_api/ai_meeting_meetings/migrations/: 0001_initial.py  0002_add_corrected_speaker_data.py
ai_meeting_api/ai_meeting_teams/: apps.py  models.py  serializers.py  urls.py  views.py
ai_meeting_api/ai_meeting_teams/migrations/: 0001_initial.py  0002_teamsetting_slack_bot_token_and_more.py
ai_meeting_api/ai_meeting_users/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
ai_meeting_api/ai_meeting_users/migrations/: 0001_initial.py  0002_user_is_team_admin_user_team.py
docs/: API_REFERENCE.md  PLAN.md
scripts/: celery_worker.sh  migrate.sh  runserver.sh  show_urls.sh
